2009-08-03  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* configure.ac: Bump to 0.3.9
	* developers/make-new-release.sh: Add more build test case.
	* NEWS: Adjust 0.3.9 to August 2009.
	* developers/make-new-release.sh: Log during build test case.

2009-08-03  Jim Huang  <jserv@0xlab.org>

	* src/mainframe.cpp (CMainFrame::OnFont) (CMainFrame::OnFontEn):
	Fix mistaken font size got from font dialog.
	Merged from http://code.google.com/p/gemanx/source/detail?r=26 .

2009-08-03  Chih-Min Chao  <cmchao@gmail.com>
	    Jim Huang  <jserv@0xlab.org>

	* src/mainframe.h (OnNotebookPopupMenu)
	src/mainframe.cpp (CMainFrame::OnNotebookPopupMenu): Introduced new
	feature: let mouse middle click be able to close tab.  It is similar
	to the behavior under Firefox.

	* src/appconfig.h (MidClickAsClose)
	src/generalprefpage.h (m_MidClickAsClose)
	src/appconfig.cpp (CAppConfig::DoDataExchange)
	(CAppConfig::SetToDefault)
	src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage)
	(CGeneralPrefPage::OnOK): Required modifications to configure this
	feature.

2009-08-03  Jim Huang  <jserv@0xlab.org>

	* src/core/pcmanx_utils.h: Introduced typedef word_t for 32-bit/64-bit
	representation.

	* src/mainframe.cpp (CMainFrame::OnJumpToPage)
	(CMainFrame::GetViewIndex)
	src/notebook.cpp (CNotebook::AddPage): Make use of word_t in INFO.
	Reported by Kovich Ian <kovich.ian@gmail.com>.

2009-07-26  Jim Huang  <jserv@0xlab.org>

	* src/core/termdata.cpp (CTermData::memset16): Rewritten.  Use C99
	uint16_t instead of "short int".  It should prevent compilers from
	being over-optimizing with -ftree-vectorize.
	Note: the usage of memset16 is somehow ambiguous for sake of the last
	function parameter (size_t n), which is regarded as divided by 2 in
	advance.

2009-05-29  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* src/pcmanx_gtk2.cpp: Add an introduction mainpage of Doxygen.

2009-05-29  Jim Huang  <jserv@0xlab.org>
