@@ -475,5 +475,5 @@ so what?
 
 >pcmanx
 PCManX 讚
-http://pcmanx.csie.net/
+http://code.google.com/p/pcmanx-gtk2/
 大家來用 pcmanx, 健康快樂沒煩惱
